# llm-runner

./: .editorconfig  .gitignore  .mdformat.toml  .rumdl.toml  .yamllint.yml  CHANGELOG.md  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-markdown.yml  lint-yaml.yml  uv-qualify.yml
docs/: sdk-backend-troubleshooting.md
src/llm_runner/: __init__.py  base.py  cli.py  errors.py  fallback.py  record.py  sdk.py
tests/: test_cli_runners.py  test_extract_json.py  test_factory_and_sdk.py  test_fallback.py
