[project]
name = "llm-runner"
version = "0.1.0"
description = "claude / codex を CLI または SDK 経由で headless 実行する薄いランナー"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
claude-sdk = ["claude-agent-sdk"]
codex-sdk = ["openai-codex"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_runner"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
