[project]
name = "llm-runner"
version = "0.1.0"
description = "claude / codex を CLI または SDK 経由で headless 実行する薄いランナー"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
claude-sdk = ["claude-agent-sdk"]
codex-sdk = ["openai-codex==0.1.0b3"]

# openai-codex から同梱バイナリ依存 (openai-codex-cli-bin) を取り除く。
# glibc Linux 向け wheel が無く、CI 等の uv sync が失敗するため。
# 実行時は PATH (または CODEX_BIN) の codex CLI を codex_bin として使う。
[[tool.uv.dependency-metadata]]
name = "openai-codex"
version = "0.1.0b3"
requires-dist = []

[dependency-groups]
dev = [
  "mdformat>=1.0.0",
  "mdformat-gfm>=1.0.0",
  "pytest>=8.0",
  "ruff>=0.8",
  "ty>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_runner"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
